--- a/hex.css
+++ b/hex.css
@@ -8,7 +8,9 @@ body {
   max-width: 900px;
   margin: auto;
   display: flex;
-  /* justify-content: center; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
