--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
 
 .container {
   width: 50%;
-  height: 50px;
+  height: 80px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .btn {
@@ -33,9 +34,9 @@ body {
   flex-basis: 40%;
   font-size: 1.2em;
   width: 40%;
-  padding: 5px 15px;
+  padding: 8px 15px;
   background-color: var(--dark-bg-color-);
-  border: 1px solid #523535;
+
   border-radius: 4px;
   color: var(--white-color-);
   cursor: pointer;
@@ -56,7 +57,7 @@ body {
 
 .remove-btn:hover,
 .btn:hover {
-  border: none;
+  border: 1px solid #000;
   background-color: var(--red-color-);
   color: var(--white-color-);
 }
